# invenio-subjects-ddc-german

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.md  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pytest.ini  run-tests.sh  setup.cfg  setup.py
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_subjects_ddc_german/: __init__.py  cli.py  converter.py  reader.py  version.py  writer.py
invenio_subjects_ddc_german/download/: __init__.py  download.py
invenio_subjects_ddc_german/vocabularies/: __init__.py  subjects_ddc_german.yaml  vocabularies.yaml
tests/: conftest.py  test_invenio_subjects_ddc.py
