# -*- coding: utf-8 -*-
#
# Copyright (C) 2021 Northwestern University.
# Copyright (C) 2022 University of Münster.
#
# invenio-subjects-ddc-german is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = invenio_subjects_ddc_german/translations/

[extract_messages]
copyright_holder = University of Münster
msgid_bugs_address = werner.gresshoff@uni-muenster.de
mapping-file = babel.ini
output-file = invenio_subjects_ddc_german/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_subjects_ddc_german/translations/messages.pot
output-dir = invenio_subjects_ddc_german/translations/

[update_catalog]
input-file = invenio_subjects_ddc_german/translations/messages.pot
output-dir = invenio_subjects_ddc_german/translations/

# [options.entry_points]
# console_scripts =
#     invenio-subjects-ddc-german = invenio_subjects_ddc_german.cli:main

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    pyproject.toml
    babel.ini
